--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "blob": "^0.1.0",
+    "file-saver": "^2.0.5",
+    "ics": "^2.29.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
